--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -4,8 +4,229 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/landing_page.css" />
-
+    <link rel="stylesheet" href="fonts/stylesheet.css" />
     <title>TDM Indonesia</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header class="navbar">
+        <a class="left_side" href="#"
+          ><img class="logo" src="images/logo_nav.png" alt="logo nav"
+        /></a>
+        <div class="right_side">
+          <a href="#">Home</a>
+          <a href="#aboutUs">Abous Us</a>
+          <a href="#whytdm">Why TDM?</a>
+          <a href="#gallery">Gallery</a>
+          <a href="#ourpartners">Our Partnerships</a>
+          <a href="#ourteam">Our Team</a>
+          <button>Contact Us</button>
+        </div>
+      </header>
+
+      <section class="hero">
+        <img src="images/image_hero.png" alt="hero image" />
+      </section>
+
+      <section id="aboutUs">
+        <img
+          class="logo_section"
+          src="images/logo_section.png"
+          alt="logo section"
+        />
+
+        <div class="bridge_ctr">
+          <div class="left_side">
+            <img class="bridge_img" src="images/bridge_img.png" alt="people" />
+          </div>
+          <div class="right_side">
+            <h2 class="title">Your Bridge to Global Opportunity</h2>
+            <p class="description">
+              Established in 2021, TDM Indonesia is where tradition meets
+              innovation. We specialize in turning borders into
+              gateways—exporting Indonesia’s finest products and importing the
+              world’s best for businesses like yours. Think of us as your
+              behind-the-scenes partners, making global trade feel effortless.
+            </p>
+          </div>
+        </div>
+
+        <div class="tailored_ctr">
+          <div class="up_side">
+            <h3 class="title">Tailored Trade Solutions</h3>
+            <p class="description">
+              We don’t just move goods—we move possibilities. Our services are
+              designed to simplify global trade, whether you’re exporting
+              Indonesia’s finest or importing essentials to fuel your business.
+            </p>
+          </div>
+
+          <div class="down_side">
+            <div class="left_side">
+              <div class="benefits_ctr">
+                <p class="title">EXPORT EXCELLENCE</p>
+                <p class="description">
+                  From Sumatra’s coffee beans to Javanese batik, we deliver
+                  Indonesia to the world.
+                </p>
+              </div>
+              <div class="benefits_ctr">
+                <p class="title">LOGISTICS, SIMPLIFIED</p>
+                <p class="description">
+                  Customs, shipping, storage and warehousing —handled with
+                  precision, consider it done.
+                </p>
+              </div>
+            </div>
+            <div class="right_side">
+              <div class="benefits_ctr">
+                <p class="title">IMPORTS MADE EASY</p>
+                <p class="description">
+                  Whether it’s machinery or materials, we source globally so you
+                  can focus locally.
+                </p>
+              </div>
+              <div class="benefits_ctr">
+                <p class="title">INSIGHTS THAT INSPIRE</p>
+                <p class="description">
+                  We’ll keep you ahead of the curve with market trends and
+                  regulations you can act on.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="vismis_ctr">
+          <div class="up_side">
+            <div class="monas_ctr">
+              <img class="monas_img" src="images/monas.png" alt="monas" />
+              <img
+                class="logo_section"
+                src="images/logo_section.png"
+                alt="logo"
+              />
+            </div>
+            <div class="vision_ctr">
+              <p class="title">Our Vision</p>
+              <p class="description">
+                To be a trusted gateway for global trade from Indonesia to the
+                World, where borders fade and partnerships thrive.
+              </p>
+            </div>
+          </div>
+          <div class="down_side">
+            <div class="mission_ctr">
+              <p class="title">Our Mission</p>
+              <p class="description">
+                Empowering businesses through seamless trade
+                solutions—connecting Indonesia’s potential to the world’s
+                demand, one ethical transaction at a time.
+              </p>
+            </div>
+            <div class="yunani_ctr">
+              <img class="yunani_img" src="images/yunani.png" alt="yunani" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="whytdm">
+        <div class="up_side">
+          <div class="left_side">
+            <p class="title">Why TDM Indonesia?</p>
+            <p class="description">
+              ASEAN-connected, backed by Indonesian governments and global
+              NGOs—we simplify trade with end- to-end EU/Asia support, from
+              strategic consultation to International trade. We are eager to
+              build our success cooperation.
+            </p>
+          </div>
+          <div class="right_side">
+            <img class="whytdm_img" src="images/whytdm_img.png" alt="whytdm" />
+          </div>
+        </div>
+        <div class="down_side">
+          <div class="card_ctr">
+            <div class="title">GLOBAL REACH, LOCAL CARE</div>
+            <div class="description">
+              Teams in Europe and Indonesia ensuring seamless shipments from
+              source to destination.
+            </div>
+          </div>
+          <div class="card_ctr">
+            <div class="title">ASEAN-BACKED & GLOBALLY TRUSTED</div>
+            <div class="description">
+              Supported by ASEAN governments and international NGOs for ethical,
+              impactful trade.
+            </div>
+          </div>
+          <div class="card_ctr">
+            <div class="title">CURATED CONNECTIONS</div>
+            <div class="description">
+              Quality-first sourcing: trusted partners, monitored processes,
+              guaranteed results.
+            </div>
+          </div>
+          <div class="card_ctr">
+            <div class="title">SOURCING FLEXIBILITY</div>
+            <div class="description">
+              Serving SMEs and factories— samples to bulk, tailored to your
+              needs.
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="gallery">
+        <div class="sentence_ctr">
+          <div class="left_side">
+            <p class="title">Building Bridges, Together</p>
+            <p class="description">
+              We’re proud to partner with visionary brands and suppliers who
+              share our commitment to quality and innovation. Together, we
+              bridge markets and possibilities.
+            </p>
+          </div>
+          <div class="gallery_ctr_1">
+            <div class="left_side">
+              <img src="images/gallery_2.png" alt="gallery" />
+            </div>
+            <div class="center_side">
+              <img src="images/gallery_3.png" alt="" />
+            </div>
+            <div class="right_side">
+              <img src="images/gallery_1.png" alt="gallery" />
+              <img src="images/gallery_4.png" alt="" />
+              <img src="images/gallery_5.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="gallery_ctr_2">
+          <img class="gallery_6" src="images/gallery_6.png" alt="" />
+          <img class="gallery_7" src="images/gallery_7.png" alt="" />
+          <img class="gallery_8" src="images/gallery_8.png" alt="" />
+        </div>
+        <div class="gallery_ctr_3">
+          <div class="left_side">
+            <img src="images/gallery_9.png" alt="" />
+          </div>
+          <div class="center_side">
+            <img src="images/gallery_10.png" alt="" />
+            <img src="images/gallery_12.png" alt="" />
+          </div>
+          <div class="right_side">
+            <img src="images/gallery_11.png" alt="" />
+            <img src="images/gallery_13.png" alt="" />
+          </div>
+        </div>
+        <div class="gallery_ctr_4">
+          <img src="images/gallery_14.png" alt="" />
+          <img src="images/gallery_15.png" alt="" />
+          <img src="images/gallery_16.png" alt="" />
+          <img src="images/gallery_17.png" alt="" />
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
