--- a/templates/css/landing_page.scss
+++ b/templates/css/landing_page.scss
@@ -474,4 +474,191 @@ a {
       }
     }
   }
+
+  #ourpartners {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .up_side {
+      padding: 100px 0 50px 0;
+      width: 710px;
+
+      .title {
+        font-family: Poppins;
+        font-weight: 600;
+        font-size: 48px;
+        line-height: 100%;
+        letter-spacing: 0%;
+        text-align: center;
+      }
+
+      .description {
+        font-family: Poppins;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 100%;
+        letter-spacing: 0%;
+        text-align: center;
+        color: #636363;
+      }
+    }
+
+    .down_side {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
+
+      img {
+        width: 272px;
+        object-fit: cover;
+      }
+    }
+  }
+
+  #ourteam {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 100px 0;
+    .up_side {
+      .title_orange {
+        font-family: Poppins;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 30px;
+        letter-spacing: 0%;
+        color: #ef8b15;
+        text-align: center;
+      }
+
+      .title {
+        font-family: Poppins;
+        font-weight: 700;
+        font-size: 40px;
+        line-height: 56px;
+        letter-spacing: 0%;
+        color: #171a1f;
+        text-align: center;
+      }
+
+      .description {
+        font-family: Poppins;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 26px;
+        letter-spacing: 0%;
+        text-align: center;
+        color: #565d6d;
+      }
+    }
+
+    .down_side {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+
+      .card_ctr {
+        width: 276px;
+        height: 327px;
+        border: 1px solid #d9d9d9;
+        border-radius: 5px;
+      }
+    }
+  }
+
+  .footer_ctr {
+    display: flex;
+    justify-content: space-between;
+
+    .left_side {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 570px;
+      img {
+        width: 216px;
+      }
+
+      .title {
+        width: 358px;
+        font-family: Poppins;
+        font-weight: 600;
+        font-size: 25px;
+        line-height: 100%;
+        letter-spacing: 0%;
+      }
+
+      .description {
+        width: 358px;
+        font-family: Poppins;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 100%;
+        letter-spacing: 0%;
+        color: #636363;
+      }
+    }
+
+    .right_side {
+      padding: 64px;
+      border: 1px solid #ef8b15;
+      border-radius: 128px 0 0 0;
+
+      .up_side {
+        display: flex;
+        justify-content: space-between;
+
+        .left {
+          p {
+            font-family: Poppins;
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 130%;
+            letter-spacing: 0%;
+            color: #36382e;
+          }
+          .title {
+            font-family: Poppins;
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 150%;
+            letter-spacing: 4%;
+            text-transform: uppercase;
+            color: #ef8b15;
+            margin-bottom: 16px;
+          }
+
+          .address_ctr {
+            margin-top: 31px;
+            margin-bottom: 59px;
+          }
+        }
+
+        .right {
+          .title {
+            font-family: Poppins;
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 150%;
+            letter-spacing: 4%;
+            text-transform: uppercase;
+            color: #ef8b15;
+          }
+
+          .medsos_ctr {
+            img {
+              padding: 8px;
+              border: 1px solid #ef8b15;
+              width: 50px;
+              border-radius: 50px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
