--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -227,6 +227,89 @@
           <img src="images/gallery_17.png" alt="" />
         </div>
       </section>
+
+      <section id="ourpartners">
+        <div class="up_side">
+          <p class="title">Powered by Partnerships</p>
+          <p class="description">
+            Collaboration is our superpower. We partner with industry pioneers
+            to bring you ethical, efficient, and impactful trade solutions.
+          </p>
+        </div>
+        <div class="down_side">
+          <img src="images/logo_tusanco.png" alt="" />
+          <img src="images/logo_area51.png" alt="" />
+          <img src="images/logo_cig.png" alt="" />
+          <img src="images/logo_cafcin.png" alt="" />
+          <img src="images/logo_tercre.png" alt="" />
+          <img src="images/logo_cofseph.png" alt="" />
+          <img src="images/logo_hbm.png" alt="" />
+          <img src="images/logo_javara.png" alt="" />
+          <img src="images/logo_sentr.png" alt="" />
+          <img src="images/logo_bincigar.png" alt="" />
+          <img src="images/logo_apex.png" alt="" />
+          <img src="images/logo_jbrn.png" alt="" />
+          <img src="images/logo_athan.png" alt="" />
+          <img src="images/logo_wave.png" alt="" />
+          <img src="images/logo_kafe.png" alt="" />
+          <img src="images/logo_ekspor.png" alt="" />
+        </div>
+      </section>
+
+      <section id="ourteam">
+        <div class="up_side">
+          <p class="title_orange">OUR TEAM</p>
+          <p class="title">Meet The Team</p>
+          <p class="description">
+            There are many variations of passages of Lorem Ipsum available but
+            the majority have suffered alteration in some form
+          </p>
+        </div>
+        <div class="down_side">
+          <div class="card_ctr">TEAM</div>
+          <div class="card_ctr">TEAM</div>
+          <div class="card_ctr">TEAM</div>
+          <div class="card_ctr">TEAM</div>
+        </div>
+      </section>
+
+      <footer class="footer_ctr">
+        <div class="left_side">
+          <img src="images/logo_section.png" alt="" />
+          <p class="title">Ready to Redefine Trade?</p>
+          <p class="description">
+            Whether you’re exporting batik or importing tech, let’s craft a
+            strategy that’s as bold as your ambitions!
+          </p>
+        </div>
+        <div class="right_side">
+          <div class="up_side">
+            <div class="left">
+              <p class="title">CONTACT</p>
+              <p>+62 821 3029 7815</p>
+              <p>+30 694 572 7892</p>
+              <p>treedayamakmur@gmail.com</p>
+              <p>www.tdmtradingcompany.com</p>
+              <div class="address_ctr">
+                <p>Jl. Cihampelas No.29 ,</p>
+                <p>Jarrdin Tower, Bandung,</p>
+                <p>Indonesia 40131</p>
+              </div>
+            </div>
+            <div class="right">
+              <p class="title">FOLLOW US</p>
+              <div class="medsos_ctr">
+                <img src="images/logo_instagram.png" alt="" />
+                <img src="images/logo_whatsapp.png" alt="" />
+                <img src="images/logo_facebook.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div class="down_side">
+            <p>© 2024 TDM Trading Company. Semua hak cipta dilindungi.</p>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
